--- a/Prog1Example/Prog1Example.vcxproj.filters
+++ b/Prog1Example/Prog1Example.vcxproj.filters
@@ -15,13 +15,13 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="inputOutput.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="ifAndSwitch.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="variablesAndTypes.cpp">
+    <ClCompile Include="loops.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="inputOutpuVariables.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
