--- a/Prog1Example/Prog1Example.vcxproj
+++ b/Prog1Example/Prog1Example.vcxproj
@@ -115,6 +115,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="ArraysAndStrings.cpp" />
     <ClCompile Include="ifAndSwitch.cpp" />
     <ClCompile Include="inputOutpuVariables.cpp" />
     <ClCompile Include="loops.cpp" />
