--- a/Prog1Example/Prog1Example.vcxproj.filters
+++ b/Prog1Example/Prog1Example.vcxproj.filters
@@ -24,5 +24,8 @@
     <ClCompile Include="inputOutpuVariables.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ArraysAndStrings.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
