--- a/Prog1Example/Prog1Example.vcxproj.filters
+++ b/Prog1Example/Prog1Example.vcxproj.filters
@@ -36,5 +36,8 @@
     <ClCompile Include="functions.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Classes.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
